--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,3 +11,7 @@
     $brd-rad:7px;
     $font-tit:'Dongle', sans-serif;
     $font-p:'Montserrat', sans-serif;
+    $padd-t: 140px;
+    $mar-t: 2em;
+    $wi-t: 36em;
+    $he-t: 6em;
