--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
   width: 18rem; }
 
 .section_vendidos {
-  margin-top: 3em; }
+  margin-top: 2.5em; }
 
 .section_redes {
   margin-top: 3em; }
@@ -62,6 +62,77 @@
 
 .section__newsellerfooter {
   margin-top: 3em; }
+
+.a-shop {
+  text-decoration: none;
+  border: 2px solid black;
+  color: black;
+  background-color: white;
+  border-radius: 7px;
+  font-size: 30px;
+  letter-spacing: 3px;
+  padding: 1em; }
+
+.a-shop:hover {
+  background-color: pink;
+  color: white; }
+
+@media only screen and (max-width: 564px) {
+  .card-context {
+    width: 11rem;
+    margin: 1%; }
+  .card-tit {
+    font-family: "Dongle", sans-serif;
+    text-decoration: none; }
+  .logo__whatsapp {
+    position: fixed;
+    width: 36em -33em;
+    bottom: .5em;
+    margin-left: 83%;
+    height: 3em;
+    z-index: 10; }
+  .card_vendidos {
+    width: 18em;
+    margin-left: 2.5em; }
+  .div_carousel {
+    margin-left: 2em; }
+  .novacTitulo {
+    font-size: 20px; }
+  .btn-nove {
+    margin-left: 3em;
+    height: 3rem; }
+  .productos-flex {
+    display: flex;
+    flex-direction: column; }
+  .div_card_productos {
+    width: 20rem;
+    margin-left: 1em; }
+  .registrarme {
+    margin-top: 1em; }
+  .informacion_registro {
+    margin-top: 1em; }
+  .card-enlace1 {
+    margin-left: 4em;
+    color: black;
+    text-decoration: none;
+    background-color: pink;
+    border: 2px solid black;
+    border-radius: 7px;
+    padding: 3px; }
+  .div_carousel {
+    padding-top: 70px; }
+  .a-shop {
+    text-decoration: none;
+    border: 2px solid black;
+    color: black;
+    background-color: white;
+    border-radius: 7px;
+    font-size: 15px;
+    letter-spacing: 3px;
+    padding: 5px; }
+  .a-shop:hover {
+    background-color: pink;
+    color: white; } }
 
 @media only screen and (min-width: 564px) {
   .btn-nove {
@@ -92,7 +163,23 @@
     bottom: .5em;
     margin-left: 89%;
     height: 3em;
-    z-index: 1; } }
+    z-index: 1; }
+  .div_carousel {
+    padding-top: 70px; }
+  .imagesabout {
+    margin-left: 2em; }
+  .a-shop {
+    text-decoration: none;
+    border: 2px solid black;
+    color: black;
+    background-color: white;
+    border-radius: 7px;
+    font-size: 18px;
+    letter-spacing: 3px;
+    padding: 0.2em; }
+  .a-shop:hover {
+    background-color: pink;
+    color: white; } }
 
 @media only screen and (min-width: 764px) {
   .div_card-img {
@@ -121,7 +208,19 @@
     bottom: .5em;
     margin-left: 90%;
     height: 4em;
-    z-index: 1; } }
+    z-index: 1; }
+  .a-shop {
+    text-decoration: none;
+    border: 2px solid black;
+    color: black;
+    background-color: white;
+    border-radius: 7px;
+    font-size: 20px;
+    letter-spacing: 3px;
+    padding: 0.5em; }
+  .a-shop:hover {
+    background-color: pink;
+    color: white; } }
 
 .img-remeras {
   height: 35rem; }
@@ -148,7 +247,19 @@
     background-color: pink;
     border: 2px solid black;
     border-radius: 7px;
-    padding: 3px; } }
+    padding: 3px; }
+  .a-shop {
+    text-decoration: none;
+    border: 2px solid black;
+    color: black;
+    background-color: white;
+    border-radius: 7px;
+    font-size: 25x;
+    letter-spacing: 3px;
+    padding: 0.5em; }
+  .a-shop:hover {
+    background-color: pink;
+    color: white; } }
 
 @media only screen and (min-width: 1200px) {
   .div_card-img {
@@ -171,7 +282,21 @@
     bottom: .5em;
     margin-left: 93%;
     height: 5em;
-    z-index: 1; } }
+    z-index: 1; }
+  .imagesabout {
+    margin-left: 2em; }
+  .a-shop {
+    text-decoration: none;
+    border: 2px solid black;
+    color: black;
+    background-color: white;
+    border-radius: 7px;
+    font-size: 30px;
+    letter-spacing: 3px;
+    padding: 1em; }
+  .a-shop:hover {
+    background-color: pink;
+    color: white; } }
 
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
